# ROB_Prakt

Convert to ROS pkgs/: launch_game.py  tf_service.py
calibration_pubsub/calibration_pubsub/: package.xml  setup.py  transformation_matrix_x.csv  transformation_matrix_y.csv
calibration_script/: package.xml  setup.cfg  setup.py
calibration_script/calibration_script/: calibration.py
calibration_script/install/: setup.ps1  setup.zsh
calibration_script/install/calibration_script/lib/calibration_pubsub/: listener
calibration_script/install/calibration_script/share/calibration_pubsub/: package.zsh
morris_engine/: setup.cfg  setup.py
morris_engine/morris_engine/: morris.py  package.xml  robot_commands.py  setup.py  utils.py
morris_interface/: CMakeLists.txt
morris_interface/install/: setup.ps1
morris_interface/morris_interface/: CMakeLists.txt  package.xml
morris_interface/srv/: MoveService.srv  TrackingData.srv
pymoveIt Examples/: ex_pose_goal_ur.py
robot_control/: setup.py
robot_control/robot_control/: control.py  package.xml  setup.py
set_workspace/: package.xml  setup.cfg  setup.py
set_workspace/set_workspace/: workspace.py
test_client/: package.xml  setup.py
test_client/test_client/: tester.py
tf_service/: package.xml  setup.cfg  setup.py
tf_service/tf_service/: tf_service.py
tracking_service/tracking_service/: package.xml  setup.py
tracking_srv_board/: package.xml  setup.cfg  setup.py
tracking_srv_gripper/: package.xml  setup.cfg  setup.py
vacuum_service/: package.xml  setup.cfg  setup.py
(+36 files in other folders)
