<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>calibration_script</name>
  <version>0.0.0</version>
  <description>Publishes calibration data and subcribes to tracking system and robot data</description>
  <maintainer email="prakt5@todo.todo">prakt5</maintainer>
	<license>Apache License 2.0</license>
	<exec_depend>rclpy</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>morris_interface</exec_depend>
	<exec_depend>pymoveit2</exec_depend>
		

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
